syntax = "proto3";

option go_package = "./pb";

package pb;


//粉丝或者关注者 其实就是User但是要避免名字相同
// message Follower {
//     int64 id = 1; // 用户id
//     string name = 2; // 用户名称
//     int64 follow_count = 3; // 关注总数
//     int64 follower_count = 4; // 粉丝总数
//     bool is_follow = 5; // true-已关注，false-未关注
//     string avatar = 6; //用户头像
//     string background_image = 7; //用户个人页顶部大图
//     string signature = 8; //个人简介
//     int64 total_favorited = 9; //获赞数量
//     int64 work_count = 10; //作品数量
//     int64 favorite_count = 11; //点赞数量
// }

message douyin_relation_follow_list_request {
    int64 user_id = 1; // 用户id
    //string token = 2; // 用户鉴权token
}
  
message douyin_relation_follow_list_response {
    //int32 status_code = 1; // 状态码，0-成功，其他值-失败
    //string status_msg = 2; // 返回状态描述
    repeated int64 user_list = 1; // 用户信息列表
}

message douyin_relation_follower_list_request {
    int64 user_id = 1; // 用户id
    string token = 2; // 用户鉴权token
}
  
message douyin_relation_follower_list_response {
    //int32 status_code = 1; // 状态码，0-成功，其他值-失败
    //string status_msg = 2; // 返回状态描述
    repeated int64 user_list = 1; // 用户列表
}
  

message douyin_relation_action_request {
    int64 user_id = 1  ;// 用户本人id
    int64 to_user_id = 2; // 对方用户id
    int32 action_type = 3; // 1-关注，2-取消关注
}
  
message douyin_relation_action_response {
    //int32 status_code = 1; // 状态码，0-成功，其他值-失败
    //string status_msg = 2; // 返回状态描述
}


message douyin_relation_friend_list_request {
    int64 user_id = 1; // 用户id
    //string token = 2; // 用户鉴权token
}
  
message douyin_relation_friend_list_response {
    //required int32 status_code = 1; // 状态码，0-成功，其他值-失败
    //optional string status_msg = 2; // 返回状态描述
    repeated int64 user_list = 3; // 好友列表
}


service followerservice{
    //关系操作
    rpc relationAction(douyin_relation_action_request) returns(douyin_relation_action_response);
    //用户关注列表
    rpc userFollowList(douyin_relation_follow_list_request) returns(douyin_relation_follow_list_response);
    //用户粉丝列表
    rpc userFollowerList(douyin_relation_follower_list_request) returns(douyin_relation_follower_list_response);
    //用户好友列表
    rpc userFriendList(douyin_relation_friend_list_request) returns(douyin_relation_friend_list_response);
}